--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 [
+
 {
-"version":"1.2".
-"key":"ashe"
+
+"version":"1.2",
+
+"Key":"Kuya Mo Cyber anak ng Kamatis",
+
+"link":"https://youtu.be/SujWeeHIjKw"
+
 }
+
 ]
+
+
+
+
+
